[package]
name = "rtic2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.7"
panic-probe = "0.3.1"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.2", features = ["rt"] }
rtic = { version = "2.1.1", features = ["cortex-m", "thumbv6-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["rp2040"] }
smart-leds = "0.3.0"
ws2812-pio = "0.7.0"
